Thu Jul 22 22:38:32 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* sprintf.c: add short documentation about named reference.
	  [ruby-core:31294]

Thu Jul 22 22:14:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regexec.c (onig_search): don't skip non-ANYCHARs when
	  .* fails to match. This causes to fail matching
	  ANYCHAR_STAR with LOOK_BEHIND. This fix is workaround
	  and disable the optimization. [ruby-dev:41851]

Thu Jul 22 22:13:48 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread_pthread.c (get_stack): fix memory leak; pthread_attr_destory
	  must be called even when pthread_getattr_np is used.
	  [ruby-core:31269]

Wed Jul 21 12:39:15 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/cmath.rb (CMath#cbrt): cbrt should accept a negative real
	  numbers.  [ruby-core:31234]

Thu Jul 15 21:43:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* numeric.c (fix_divide): must not use rb_rational_new1 for coercion
	  because it returns an argument itself when canonical mode is set.
	  [ruby-core:31279]

Thu Jul 15 21:38:31 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (bm_free): fix memory leak.  [ruby-core:30869] [Bug #3466]

Tue Jul 13 12:04:57 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* missing/close.c: keep original errno.

Thu Jul  8 00:15:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* gem_prelude.rb: provide workaround for gem activation.  Currently,
	  gem activation does not work by default.  Now it can be worked
	  around by requiring "rubygems" first.  [ruby-core:29486]
	  a patch from Evan Phoenix in [ruby-core:31096].

	* lib/rubygems.rb: ditto.

Sun Jul 11 15:14:03 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Makefile.in ({|dist-|real-}clean-ext): fixes the previous
	  commit. http://twitter.com/knu/status/18247078381

	* tool/rmdirs: ditto.

Sat Jul 10 20:03:48 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Makefile.in ({|dist-|real-}clean-ext): fixes syntax 
	  for /bin/sh on Solaris

	* tool/rmdirs: ditto
