@@ -1,3 +1,7 @@
+Thu Jul 22 14:30:17 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* include/ruby/missing.h: add prototype for ruby_close().
+
 Thu Jul 22 22:38:32 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* sprintf.c: add short documentation about named reference.
